--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,12 @@ h6 {
   width: 100%;
 }
 
+@media only screen and (max-width: 700px) {
+  .menu-header {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  
+}
+
